Added a shop logo

--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav class="navigation">
-           <div class="navigation-logo">
-              <img width="150" src="logo.svg" alt="logo">
-           </div>
-           <div class="navigation-pages">
-              <a href="" class="navigations__headphones">Headphones</a>
-              <a href="" class="navigations__speakers">Speakers</a>
-              <a href="" class="navigations__news">News</a>
-              <a href="" class="navigations__testimonials">Testimonials</a>
-           </div>
-           <div class="navigation-social">
-              <img src="" alt="facebook">
-              <img src="" alt="instagram">
-              <img src="" alt="twitter">
-              <img src="" alt="youtube">
-           </div>
+            <div class="navigation-logo">
+                <img width="150" src="img/logo.svg" alt="logo">
+            </div>
+            <div class="navigation-pages">
+                <a href="" class="navigations__headphones">Headphones</a>
+                <a href="" class="navigations__speakers">Speakers</a>
+                <a href="" class="navigations__news">News</a>
+                <a href="" class="navigations__testimonials">Testimonials</a>
+            </div>
+            <div class="navigation-social">
+                <img src="" alt="facebook">
+                <img src="" alt="instagram">
+                <img src="" alt="twitter">
+                <img src="" alt="youtube">
+            </div>
         </nav>
         <div class="banner">
-           <div class="banner__text">
-              <h1>Great Sound at Low Prices</h1>
-              <p>Headphones and loudspeakers from the best brands.</p>
-              <div class="links">
-                 <a href="" class="links__about">About us</a>
-                 <a href="" class="links__shop">Shop now</a>
-              </div>
-           </div>
+            <div class="banner__text">
+                <h1>Great Sound at Low Prices</h1>
+                <p>Headphones and loudspeakers from the best brands.</p>
+                <div class="links">
+                    <a href="" class="links__about">About us</a>
+                    <a href="" class="links__shop">Shop now</a>
+                </div>
+            </div>
         </div>
-     </header>
-     <main>
-         
-     </main>
+    </header>
+    <main>
+
+    </main>
 </body>
+
 </html>
