--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <header>
+        <div class="contacts">
+            <div class="contacts__item">
+                <span class="contacts__cellphone">Customer Care:</span>
+                <a href="tel:+1 (234) 567 89 00">+1 (234) 567 89 00</a>
+            </div>
+            <div class="contacts__item">
+                <span class="contacts__mail">Email:</span>
+                <a href="mailto:basside@email.com">basside@email.com</a>
+            </div>
+        </div>
         <nav class="navigation">
             <div class="navigation-logo">
                 <img width="150" src="img/logo.svg" alt="logo">
