--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="contacts">
             <div class="contacts__item">
                 <span class="contacts__cellphone">Customer Care:</span>
-                <a href="tel:+1 (234) 567 89 00">+1 (234) 567 89 00</a>
+                <a href="tel:+12345678900">+1 (234) 567 89 00</a>
             </div>
             <div class="contacts__item">
                 <span class="contacts__mail">Email:</span>
@@ -49,7 +49,58 @@
         </div>
     </header>
     <main>
+        <section class="first-section">
+            <div class="services">
+                <div class="services__type">
+                    <div class="item">
+                        <div class="item__icon">
+                            <img src="" alt="Money back">
+                        </div>
+                        <div class="item__text">
+                            <h2>Money back</h2>
+                            <p>30-days guarantee</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__icon">
+                            <img src="" alt="24/7 Support">
+                        </div>
+                        <div class="item__text">
+                            <h2>24/7 Support</h2>
+                            <p>We work round the clock</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__icon">
+                            <img src="" alt="Fast delivery">
+                        </div>
+                        <div class="item__text">
+                            <h2>Fast delivery</h2>
+                            <p>In 2-4 business days</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__icon">
+                            <img src="" alt="24/7 Support">
+                        </div>
+                        <div class="item__text">
+                            <h2>24/7 Support</h2>
+                            <p>We work round the clock</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="item__icon">
+                            <img src="" alt="Free Shipping">
+                        </div>
+                        <div class="item__text">
+                            <h2>Free Shipping</h2>
+                            <p>For all orders over $100</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </section>
     </main>
 </body>
 
