--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    
     <header>
+        <!--Контакти-->
         <div class="contacts">
             <div class="contacts__item">
                 <span class="contacts__cellphone">Customer Care:</span>
@@ -20,6 +22,7 @@
                 <a href="mailto:basside@email.com">basside@email.com</a>
             </div>
         </div>
+        <!--Навігація-->
         <nav class="navigation">
             <div class="navigation-logo">
                 <img width="150" src="img/logo.svg" alt="logo">
@@ -37,6 +40,7 @@
                 <img src="" alt="youtube">
             </div>
         </nav>
+        <!--Основна сторінка-->
         <div class="banner">
             <div class="banner__text">
                 <h1>Great Sound at Low Prices</h1>
@@ -49,7 +53,9 @@
         </div>
     </header>
     <main>
+        <!--Перша секція-->
         <section class="first-section">
+            <!--Каруселька з сервісом-->
             <div class="services">
                 <div class="services__type">
                     <div class="item">
