--- a/index.html
+++ b/index.html
@@ -107,6 +107,134 @@
             </div>
 
         </section>
+        <!--Четверта секція (початок)-->
+        <section class="fourth-section">
+            <div class="Speakers">
+                <header>
+                    <h2>Speakers</h2>
+                    <div class="picture">
+                        <img width="100" src="img/de2.svg" alt="">
+                    </div>
+                    <div class="text">
+                        <p>Take your music with you wherever you go and enjoy the high-quality sound.</p>
+                    </div>
+                </header>
+                <div class="block_4_content">
+                    <div class="colection_slider">
+                        <button type="button" class="arrow_prev">
+                        </button>
+                        <div class=slick-list>
+                            <div class="product_card">
+                                <a href="/shop/sony-yt555">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/Sony.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/sony-yt555" class="text_link"> Sony-yt555
+                                </a>
+                                <div class="product_price">
+                                    <p>$100,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <a href="/shop/jbl-pt-25">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/jbl_pt25.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/jbl-pt-25" class="text_link"> JBL PT-25
+                                </a>
+                                <div class="product_price">
+                                    <p>$150,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <a href="/shop/jbl-rr56">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/jbl_rr56.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/jbl-rr56" class="text_link"> JBL RR-56
+                                </a>
+                                <div class="product_price">
+                                    <p>$180,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <a href="/shop/jbl-rr55">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/jbl_rr55.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/jbl-rr55" class="text_link"> JBL RR-55
+                                </a>
+                                <div class="product_price">
+                                    <p>$180,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <a href="/shop/jbl-or57">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/jbl_or57.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/jbl-or57" class="text_link"> JBL OR-57
+                                </a>
+                                <div class="product_price">
+                                    <p>$180,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="product_card">
+                                <a href="/shop/jbl-gt345">
+                                    <div class="preview">
+                                        <img class="preview" alt="Sony" src="img/jbl_gt345.png">
+                                    </div>
+                                </a>
+                                <a href="/shop/jbl-gt345" class="text_link"> JBL GT-345
+                                </a>
+                                <div class="product_price">
+                                    <p>$180,00</p>
+                                </div>
+                                <div class="product_button">
+                                    <button type="button">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video">
+            </div>
+            <h2>14 Hours of music
+            </h2>
+            <p>Enjoy freedom of movement with wireless headphones.</p>
+            <div class="play_button">
+                <button type="button">
+                </button>
+            </div>
+        </section>
+        <!--Четверта секція (кінець)-->
     </main>
 </body>
 
