Add tab headers and one tab name without image

--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@
                     </div>
                 </div>
             </div>
+            <!--Вкладки(таби) для першої секції-->
+            <div class="tabs">
+                <div class="tabs__head">
+                   <a href="" class="tabs__name">Featured</a>
+                   <a href="" class="tabs__name">Sale</a>
+                   <a href="" class="tabs__name">New</a>
+                </div>
+                <div class="tabs__body">
+                   <div class="tabs__content">
+                      <div class="tabs__image">
+                         <a href="#"><img src="" alt="red loudspeaker"></a>
+                      </div>
+                      <a href="">JBL RR-56</a>
+                      <p>$110,00</p>
+                      <form action="#" method="get">
+                         <button type="submit">Add to cart</button>
+                      </form>
+    
+                   </div>
+                </div>
+             </div>
 
         </section>
     </main>
