Added content to section4

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
         </section>
         <!--Четверта секція (початок)-->
         <section class="fourth-section">
+            <!--Каруселька-->
             <div class="Speakers">
                 <header>
                     <h2>Speakers</h2>
@@ -263,29 +264,29 @@
                 </header>
                 <div class="block_4_content">
                     <div class="colection_slider">
-                        <button type="button" class="arrow_prev">
+                        <button type="button" class="arrow_prev">previous
                         </button>
                         <div class=slick-list>
                             <div class="product_card">
                                 <a href="/shop/sony-yt555">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/Sony.png">
+                                        <img class="preview" alt="Sony YT555" src="img/new/sony-y.png">
                                     </div>
                                 </a>
-                                <a href="/shop/sony-yt555" class="text_link"> Sony-yt555
+                                <a href="/shop/sony-yt555" class="text_link"> Sony YT555
                                 </a>
                                 <div class="product_price">
                                     <p>$100,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                             <div class="product_card">
                                 <a href="/shop/jbl-pt-25">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/jbl_pt25.png">
+                                        <img class="preview" alt="JBL PT-25" src="img/new/jbl_pt25.png">
                                     </div>
                                 </a>
                                 <a href="/shop/jbl-pt-25" class="text_link"> JBL PT-25
@@ -294,14 +295,14 @@
                                     <p>$150,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                             <div class="product_card">
                                 <a href="/shop/jbl-rr56">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/jbl_rr56.png">
+                                        <img class="preview" alt="JBL RR-56" src="img/featured/jbl-rr.png">
                                     </div>
                                 </a>
                                 <a href="/shop/jbl-rr56" class="text_link"> JBL RR-56
@@ -310,14 +311,14 @@
                                     <p>$180,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                             <div class="product_card">
                                 <a href="/shop/jbl-rr55">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/jbl_rr55.png">
+                                        <img class="preview" alt="JBL RR-55" src="img/new/jbl_rr55.png">
                                     </div>
                                 </a>
                                 <a href="/shop/jbl-rr55" class="text_link"> JBL RR-55
@@ -326,14 +327,14 @@
                                     <p>$180,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                             <div class="product_card">
                                 <a href="/shop/jbl-or57">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/jbl_or57.png">
+                                        <img class="preview" alt="JBL OR-57" src="img/new/jbl_or57.png">
                                     </div>
                                 </a>
                                 <a href="/shop/jbl-or57" class="text_link"> JBL OR-57
@@ -342,14 +343,14 @@
                                     <p>$180,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                             <div class="product_card">
                                 <a href="/shop/jbl-gt345">
                                     <div class="preview">
-                                        <img class="preview" alt="Sony" src="img/jbl_gt345.png">
+                                        <img class="preview" alt="JBL GT-345" src="img/new/jbl_gt345.png">
                                     </div>
                                 </a>
                                 <a href="/shop/jbl-gt345" class="text_link"> JBL GT-345
@@ -358,19 +359,21 @@
                                     <p>$180,00</p>
                                 </div>
                                 <div class="product_button">
-                                    <button type="button">
+                                    <button type="button">Add to cart
                                     </button>
                                 </div>
                             </div>
                         </div>
+                        <button type="button" class="arrow_next">next
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="video">
             </div>
-            <h2>14 Hours of music
-            </h2>
-            <p>Enjoy freedom of movement with wireless headphones.</p>
+                <h2>14 Hours of music
+                </h2>
+                <p>Enjoy freedom of movement with wireless headphones.</p>
             <div class="play_button">
                 <button type="button">
                 </button>
