--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Music Devices Store Website</title>
+    <link rel="icon" type="image/png" href="img/icons/B.png" sizes="16x16">
 </head>
 
 <body>
