Added links for <navigations-logo>

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="banner-bg banner-bg_origin">
             <nav class="navigation">
                 <div class="navigation-logo">
-                    <img width="150" src="img/logo.svg" alt="logo">
+                    <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
                 </div>
                 <div class="navigation-pages">
                     <a href="" class="navigations__headphones">Headphones</a>
