--- a/product-card.html
+++ b/product-card.html
@@ -28,7 +28,7 @@
         <div class="banner-bg banner-bg_white">
             <nav class="navigation">
                 <div class="navigation-logo">
-                    <img width="150" src="img/logo.svg" alt="logo">
+                  <a href="index.html"><img width="150" src="img/logo.svg" alt="logo"></a>
                 </div>
                 <div class="navigation-pages">
                     <a href="" class="navigations__headphones">Headphones</a>
