Added link for<product name>

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <div class="tabs__image">
                                 <a href="product-card.html"><img src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
                             </div>
-                            <a href="">JBL RR-56</a>
+                            <a href="product-card.html">JBL RR-56</a>
                             <p>$110,00</p>
                             <form action="#" method="get">
                                 <button class="tabs__button" type="submit">Add to cart</button>
