--- a/index.html
+++ b/index.html
@@ -123,120 +123,123 @@
                     <div class="tabs__body">
                         <!--Вкладка Featured-->
                         <div id="tab_01" class="tabs__content">
-                            <div class="tabs__image">
-                                <a href="product-card.html"><img src="img/featured/jbl-rr.png" alt="jbl RR-56"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="product-card.html"><img src="img/featured/jbl-rr.png"
+                                        alt="jbl RR-56"></a>
+                                <a class="tabs__product-name" href="product-card.html">JBL RR-56</a>
+                                <p>$110,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="product-card.html">JBL RR-56</a>
-                            <p>$110,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/featured/sennheiser-sn.png" alt="Sennheiser SN-67"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/featured/sennheiser-sn.png"
+                                        alt="Sennheiser SN-67"></a>
+                                <a class="tabs__product-name" href="">Sennheiser SN-67</a>
+                                <p>$213,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Sennheiser SN-67</a>
-                            <p>$213,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/featured/gbl-gt.png" alt="JBL GT-345"></a>
+                                <a class="tabs__product-name" href="">JBL GT-345</a>
+                                <p>$120,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">JBL GT-345</a>
-                            <p>$120,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/featured/sony-s.png" alt="Sony S890"></a>
+                                <a class="tabs__product-name" href="">Sony S890</a>
+                                <p>$259,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Sony S890</a>
-                            <p>$259,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
                         </div>
 
                         <!--Вкладка Sale-->
                         <div id="tab_02" class="tabs__content">
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/sale/marshall-dr.png" alt="Marshal DR67"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/sale/marshall-dr.png"
+                                        alt="Marshal DR67"></a>
+                                <a class="tabs__product-name" href="">Marshal DR67</a>
+                                <p>$459,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Marshal DR67</a>
-                            <p>$459,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/sale/v-moda.png" alt="V-MODA ER65"></a>
+                                <a class="tabs__product-name" href="">V-MODA ER65</a>
+                                <p>$80,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">V-MODA ER65</a>
-                            <p>$80,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/sale/bose-g.png" alt="Bose G656-A"></a>
+                                <a class="tabs__product-name" href="">Bose G656-A</a>
+                                <p>$65,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Bose G656-A</a>
-                            <p>$65,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/sale/airpulse-r.png" alt="AirPulse R255"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/sale/airpulse-r.png"
+                                        alt="AirPulse R255"></a>
+                                <a class="tabs__product-name" href="">AirPulse R255</a>
+                                <p>$185,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">AirPulse R255</a>
-                            <p>$185,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-
                         </div>
+
                         <!--Вкладка New-->
                         <div id="tab_03" class="tabs__content">
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/new/sony-y.png" alt="Sony YT555"></a>
+                                <a class="tabs__product-name" href="">Sony YT555</a>
+                                <p>$140,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Sony YT555</a>
-                            <p>$140,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/new/sony-tt.png" alt="Sony TT56"></a>
+                                <a class="tabs__product-name" href="">Sony TT56</a>
+                                <p>$98,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">Sony TT56</a>
-                            <p>$98,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/new/jbl-br.png" alt="JBL BR-55"></a>
+                                <a class="tabs__product-name" href="">JBL BR-55</a>
+                                <p>$110,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">JBL BR-55</a>
-                            <p>$110,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
 
-                            <div class="tabs__image">
-                                <a href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
+                            <div class="tabs__container">
+                                <a class="tabs__image" href="#"><img src="img/new/jbl-wn.png" alt="JBL 334WN"></a>
+                                <a class="tabs__product-name" href="">JBL 334WN</a>
+                                <p>$140,00</p>
+                                <form action="#" method="get">
+                                    <button class="tabs__button" type="submit">Add to cart</button>
+                                </form>
                             </div>
-                            <a href="">JBL 334WN</a>
-                            <p>$140,00</p>
-                            <form action="#" method="get">
-                                <button class="tabs__button" type="submit">Add to cart</button>
-                            </form>
-
                         </div>
                     </div>
                 </div>
@@ -252,7 +255,6 @@
                         <h2>Headphones Sale</h2>
                         <a class="offer__button offer__button_white" href=""><span>LEARN MORE</span></a>
                     </div>
-
                 </div>
             </div>
         </section>
