--- a/index.html
+++ b/index.html
@@ -258,6 +258,33 @@
                 </div>
             </div>
         </section>
+        <!--Second page-->
+        <section class="second-section"
+                  <div class="Heading">
+        <h2>Mindblowing Sound in Our Store</h2>
+        <p>Discover the world of high-quality sound and enjoy your favorite tracks with Basside online store.</p>
+        <P>Basside knows everything about the riffs, percussions, and baselines. We will help you choose the best
+            headphones
+            and speakers to hear the thinnest tones that have always been there.</p>
+    </div>
+    <div class="Secondheading">
+        <h3>All Kinds of Headphones</h3>
+        <p>We sell headphones by famous brands (from Sennheiser to Bang & Olufsen), including models for gaming.</p>
+        <h3>Top Loudspeakers</h3>
+        <p>Enjoy your favorite music everywhere — outdoors, in the office, at home, and at parties. </p>
+        <h3>Wireless Connection</h3>
+        <p>We offer many wireless models of headphones and loudspeakers for your comfort. </p>
+    </div>
+    <div class="OrangeBlock">
+        <h2>JBL Speaker</h2>
+        <h3>Model</h3>
+        <p>JBL HY-F2234</p>
+        <h3>Details</h3>
+        <p>This wireless model delivers a bass-heavy sound. You can enjoy your favorite songs whenever you are, thanks
+            to powerful radiators and full-range speakers. JBL will take your music listening experience to the next
+            level.</p>
+    </div>
+    </section>
         <!--Четверта секція (початок)-->
         <section class="fourth-section">
             <!--Каруселька-->
