--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
                 <h4>March 28,2021</h4>
             </div>
-            <div cass="person3">
+            <div class="person3">
 
                 <h3>Eric Smith</h3>
             </div>
@@ -481,8 +481,9 @@
             </div>
             <div class="Articles-container">
             </div>
+
             <div class="Speakers">
-                <img= img/"">
+                <img src="img/"">
                     <h4>Speakers</h4>
                     <h2>How to Choose a Speaker for Office?</h2>
             </div>
@@ -490,8 +491,7 @@
             <div class="text">
                 <p>Want to enjoy cool background music in your office? We will help you choose the right speakers.</p>
                 <div class="article_button">
-                    <button type="Read more">
-                    </button>
+                    <a href="#"> Read more </a>
                 </div>
                 <div class="headphones">
                     <img= img/"">
@@ -500,9 +500,8 @@
                 </div>
                 <div class="text">
                     <p>Spring 2021 has brought a lot of new products from top wireless headphone manufacturers.</p>
-                    <div class="article_button">
-                        <button type="Read more">
-                        </button>
+                    <div class="article-button">
+                        <a href="#"> Read more </a>
                     </div>
 
                     <div class="Speakers">
@@ -512,9 +511,8 @@
                     </div>
                     <div class="text">
                         <p>A speaker for home should be inexpensive, durable, and with added features, right?</p>
-                        <div class="article_button">
-                            <button type="read more">
-                            </button>
+
+                        <a href="#"> Read more </a>
                         </div>
                     </div>
 
