--- a/index.html
+++ b/index.html
@@ -417,8 +417,10 @@
         </section>
         <!--Четверта секція (кінець)-->
 
+<!--Section about news and reviews-->
+
         <section class="brand logos">
-            <!--Каруселька 1-->
+            <!--roundabout brand logos-->
             <div class="cards-container">
             </div>
             <div class="brand logos">
@@ -432,7 +434,7 @@
             <img src="img/logo-sennheiser.svg" alt="Sennheiser" width="50">
             <img src="img/logo-sony.svg" alt="Sony" width="50">
         </section>
-        <!--Каруселька 2-->
+        <!--roundabout reviews-->
         <section class="Our customers Say">
             <h2>Our Customers Say</h2>
             <img src="img/logo-main.svg" alt="Main" width="50">
@@ -494,7 +496,7 @@
                     <a href="#"> Read more </a>
                 </div>
                 <div class="headphones">
-                    <img= img/"">
+                    <img= img/"girl2">
                         <h4>Headphones</h4>
                         <h2>Top 5 New Headphones</h2>
                 </div>
