--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
             </div>
 
             <div class="Speakers">
-                <img src="img/"">
+                <img src="img/">
                     <h4>Speakers</h4>
                     <h2>How to Choose a Speaker for Office?</h2>
             </div>
@@ -496,7 +496,7 @@
                     <a href="#"> Read more </a>
                 </div>
                 <div class="headphones">
-                    <img= img/"girl2">
+                    <img src="img/girl2.png" alt="girl-with-headphones">
                         <h4>Headphones</h4>
                         <h2>Top 5 New Headphones</h2>
                 </div>
@@ -507,7 +507,7 @@
                     </div>
 
                     <div class="Speakers">
-                        <img= img/"">
+                        <img src="img/">
                             <h4>Speakers</h4>
                             <h2>Home Usage of Loudspeakers</h2>
                     </div>
